--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Snake Game</title>
-     <!-- css -->
+    <title>Snake Game</title
      <link rel="stylesheet" href="./css/style.css">
-    <!-- P5.JS -->
     <script src="./js/p5.js"></script>
-    <!-- JavaScript -->
     <script src="./js/main.js"></script>
 </head>
 <body>
